--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Heading</h1>
+  <h1>Heading222</h1>
   <div>Body</div>
   <script src="js/scripts.js"></script>
 </body>
