--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <h1>Heading222</h1>
-  <div>Body</div>
+  <div>Body222</div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
